--- a/WebAppTrue/WebAppTrue/WebAppTrue.csproj
+++ b/WebAppTrue/WebAppTrue/WebAppTrue.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ChatMessagesController.cs" />
+    <Compile Include="Controllers\ChatRoomEmploeesController.cs" />
     <Compile Include="Controllers\ChatRoomsController.cs" />
     <Compile Include="Controllers\EmplyeesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -203,7 +205,10 @@
     <Compile Include="Models\Type.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\ResponceChatMessage.cs" />
     <Compile Include="Model\ResponceChatRoom.cs" />
+    <Compile Include="Model\ResponceChatRoomEmployee.cs" />
+    <Compile Include="PartClass\ChatMessagePart.cs" />
     <Compile Include="PartClass\ChatRoomPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\ResponeEmployee.cs" />
